# neural-networks-and-deep-learning

./: pyproject.toml
src/: main.py  network2.py  network2_vectorized.py
